--- a/styles/style.css
+++ b/styles/style.css
@@ -122,11 +122,6 @@ h3 {
   background-color: #BE8C63;
 }
 
-.titleDescr {
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
 /* Navigation bar */
 .nav-item {
   padding: 0 12px;
@@ -143,7 +138,7 @@ h3 {
 }
 
 .navbar-brand {
-  font-family: "Ubuntu";
+  /* font-family: "Ubuntu"; */
   font-weight: bold;
   font-size: 2rem;
 
@@ -151,7 +146,7 @@ h3 {
 }
 
 .titleContainer {
-  padding: 0 10px 25px 25px;
+  /* padding: 0 10px 25px 25px; */
   /* width: 150%; */
   /* height:60%; */
 }
@@ -159,6 +154,8 @@ h3 {
 .titleImg {
   width: 100%;
   height: 400px;
+  padding: 0;
+  margin: 0;
   /* margin: 20px auto 20px 20%;
   padding-right: 20px; */
   /* margin-top: 20px;
@@ -175,6 +172,8 @@ h3 {
   height: 160px;
   width: 160px;
   cursor: pointer;
+  float: left;
+  margin:0 20px 20px 30px;
 }
 
  /* .tquoteButton {
@@ -194,27 +193,13 @@ h5{
   font-weight: bold;
 }
 .servicesContainer {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 10% auto;
 }
-
-.servicesOffered {
-  float: left;
-  margin-right: 30px;
-  background-color: #E9E5D6;
-}
-
 .servicesOfferedImg1 {
   width: 100%;
   height: 80%;
   float: left;
-  margin: 20px 20px;
-}
-
-.servicesOfferedImg2 {
-  width: 10%;
-  float: right;
-  margin-left: 30px;
+  margin: 10% 10%;
 }
 
 /* Gallery */
@@ -235,6 +220,7 @@ h5{
 /* features */
 #features {
   background-color: #EBD8C3;
+  text-align: center;
 }
 .featureBox{
   text-align: center;
@@ -341,13 +327,12 @@ td:last-child {
 
 }
 .contactContainer{
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 200px;
-  padding-right: 50px;
+  /* top | right | bottom | left */
+  padding: 30px 50px 30px 200px;
 }
 .card{
   background-color: #FFF6EA;
+
 }
 .contactInfo{
   padding-top: 50px;
@@ -374,6 +359,9 @@ a:active {
 /* Media Queries */
 /* // Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
+  /* body{
+    text-align: center;
+  } */
   .address {
     font-size: 10px;
   }
@@ -397,7 +385,9 @@ a:active {
     padding-top: 2px;
     /* padding-bottom: 8px; */
   }
-
+  .servicesOfferedImg1{
+    width: 80%;
+  }
 
 
   .navbar-brand {
@@ -433,9 +423,9 @@ a:active {
   }
 
   .logo {
-    height: 100px;
-    width: 100px;
-    margin-left: 30px;
+    height: 150px;
+    width: 150px;
+    margin-top: 25px;
   }
 
   #btnScrollToTop {
@@ -454,7 +444,10 @@ a:active {
     padding-bottom: 20px;
   }
   .contactContainer{
-    padding-left: 50px;
+    padding-left: 30px;
+  }
+  #features{
+    text-align: center;
   }
 
 }
